[WinCairo] Assertion fails while ~RemoteImageBufferProxy in DrawingAreaWC CommitQueue https://bugs.webkit.org/show_bug.cgi?id=249694

Reviewed by Kimmo Kinnunen.

An assertion failed because RemoteImageBufferProxy was destroyed in
the non-main thread.

* Source/WebKit/WebProcess/WebPage/wc/DrawingAreaWC.cpp:
(WebKit::DrawingAreaWC::sendUpdateNonAC): Don't leave the lifetime of
RefPtr<ImageBuffer> in the lambda functions.

Canonical link: https://commits.webkit.org/258214@main